added Jwt authenticatio filter chain and added some comments and minor code changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.config.import=optional:file:.env[.properties]
+x
 spring.application.name=patchlens-spring-backend
 
 spring.datasource.url=${DB_URL}
