--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,13 @@
 			<version>0.13.0</version>
 			<scope>runtime</scope>
 		</dependency>
+
+
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>3.2.4</version>
+		</dependency>
 	</dependencies>
 
 	<build>
