--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,4 @@ spring.security.user.name=${SPRING_USER}
 spring.security.user.password=${SPRING_PASSWORD}
 
 jwt.secret=${JWT_SECRET}
+anthropic.apiKey=${ANTHROPIC_API_KEY}
