MAJOR CHANGES: ADDED AWS SECRET MANAGER DEPENDENCY AND CHANGED THE APPLICATION.PROPERTIES TO BE ABLE TO RUN THIS PROJECT ON EC2 INSTANCE

--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,12 @@
 			<version>2.11.1</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/io.awspring.cloud/spring-cloud-aws-starter-secrets-manager -->
+		<dependency>
+			<groupId>io.awspring.cloud</groupId>
+			<artifactId>spring-cloud-aws-starter-secrets-manager</artifactId>
+			<version>3.4.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
