--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,11 @@
-spring.config.import=optional:file:.env[.properties]
+spring.config.import=optional:file:.env[.properties],optional:aws-secretsmanager:prod/patchlens/env
 spring.application.name=patchlens-spring-backend
+spring.cloud.aws.region.static=ap-southeast-1
+
+#idk just include this to make the aws secret manager work.
+spring.autoconfigure.exclude=\
+  org.springframework.boot.autoconfigure.security.reactive.ReactiveUserDetailsServiceAutoConfiguration,\
+  org.springframework.boot.autoconfigure.security.reactive.ReactiveSecurityAutoConfiguration
 
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
